--- a/view/frontend/templates/form/register.phtml
+++ b/view/frontend/templates/form/register.phtml
@@ -1,7 +1,7 @@
 <?php
 // @codingStandardsIgnoreFile
 
-/** @var \Magento\Customer\Block\Form\Register $block */
+/** @var \Elogic\Linkedin\Block\Form\Register $block */
 ?>
 <?= $block->getChildHtml('form_fields_before') ?>
 <?php /* Extensions placeholder */ ?>
@@ -129,7 +129,7 @@
                 <input type="email" name="email" autocomplete="email" id="email_address" value="<?= $block->escapeHtmlAttr($block->getFormData()->getEmail()) ?>" title="<?= $block->escapeHtmlAttr(__('Email')) ?>" class="input-text" data-mage-init='{"mage/trim-input":{}}' data-validate="{required:true, 'validate-email':true}">
             </div>
         </div>
-        <div class="field linkedin_profile">
+        <div class="field linkedin_profile" <?=$block->getLinkedinVisibility();?>>
             <label class="label" for="linkedin_profile"><span><?= $block->escapeHtml(__('Linkedin Profile')) ?></span></label>
             <div class="control">
                 <input type="text" name="linkedin_profile" id="linkedin_profile" data-input="linkedin_profile" value="<?= $block->getFormData()->getLinkedinProfile() ?>" title="<?= $block->escapeHtmlAttr(__('Linkedin Profile')) ?>" class="input-text" data-validate="{'validate-url':true, 'validate-length':250}" />
@@ -173,9 +173,6 @@
         </div>
     </div>
 </form>
-<?php
-print_r($block->debug());
-?>
 <script>
     require([
         'jquery',
